Fixed minor commit warnings